--- a/composer.json
+++ b/composer.json
@@ -37,13 +37,12 @@
         "zendframework/zenddiagnostics": "^1.0"
     },
     "conflict": {
-        "friendsofsymfony/rest-bundle": "<2.1 || >=3.0",
         "jms/serializer": "<0.13",
         "sonata-project/admin-bundle": "<3.1"
     },
     "require-dev": {
         "enqueue/amqp-lib": "^0.8",
-        "friendsofsymfony/rest-bundle": "^2.1",
+        "friendsofsymfony/rest-bundle": "^2.1 || ^3.0",
         "guzzlehttp/guzzle": "^3.8",
         "jms/serializer-bundle": "^1.0 || ^2.0",
         "liip/monitor-bundle": "^2.0",
